fix the z-index of head bar

--- a/PersonalPortfolioWebpage/css/master.css
+++ b/PersonalPortfolioWebpage/css/master.css
@@ -19,6 +19,7 @@ a {
 	width: 100%;
 	background: rgba(250, 250, 250, 0.6);
 	position: fixed;
+	z-index: 1;
 }
 
 .head_nav {
